--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -8,7 +8,7 @@
               <!--{{form.valid}}
               {{form.value | json}}-->
 
-              <form #form="ngForm"  novalidate>
+              <form [formGroup]="orderForm"  novalidate>
                 <div class="row">
                   <div class="col-xs-12">
                     <h2 class="page-header">
@@ -17,25 +17,54 @@
                   </div>
                 </div>
 
-                <div class="row invoice-info">
+                <div class="row">
+                  <div class="cols-xs-12 col-sm-9">
+                    <p class="lead">Seus Dados:</p>
+                  </div>
+
+                  <div class="cols-xs-12 col-sm-3">
+                      <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNoMatch')"><i class="fa fa-remove"></i>Emails não conferem!</span>
+                  </div>
+
+                  <div class="col-sm-6 col-xs-12">
+                  <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" Label="Nome">
+                    <input class="form-control" formControlName="name" placeholder="Nome" autocomplet="off">
+                  </mt-input-container>
+                  </div>
+
+                  <div class="col-sm-3 col-xs-6">
+                    <mt-input-container errorMessage="E-mail inválido" Label="E-mail">
+                      <input type="text" class="form-control" formControlName="email" placeholder="E-mail" autocomplet="off">
+                    </mt-input-container>
+                  </div>
+
+                  <div class="col-sm-3 col-xs-6">
+                    <mt-input-container errorMessage="E-mail inválido" Label="Email">
+                      <input type="text" class="form-control" formControlName="emailConfirmation" placeholder="Confirnmação do E-mail" autocomplet="off">
+                    </mt-input-container>
+                  </div>
+
+                </div>
+
+                <div class="row">
                   <div class="col-xs-12">
                     <p class="lead">Endereço de Entrega:</p>
                   </div>
                   <div class="col-sm-6 col-xs-12">
                   <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" Label="Endereço">
-                    <input name="address" class="form-control" ngModel required minlength="5" placeholder="Endereço" autocomplet="off">
+                    <input class="form-control" formControlName="address"  placeholder="Endereço" autocomplet="off">
                   </mt-input-container>
                   </div>
 
                   <div class="col-sm-3 col-xs-6">
                     <mt-input-container errorMessage="Obrigatório e somente números" Label="Número">
-                      <input type="text" class="form-control" name="number" required  ngModel placeholder="Número" pattern="^[0-9]*$" autocomplet="off">
+                      <input type="text" class="form-control" formControlName="number" placeholder="Número" autocomplet="off">
                     </mt-input-container>
                   </div>
 
                   <div class="col-sm-3 col-xs-6">
                     <mt-input-container>
-                      <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
+                      <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
                     </mt-input-container>
                   </div>
                   <!-- /.col -->
@@ -64,7 +93,7 @@
                     <p class="lead">Formas de Pagamento:</p>
 
                       <div class="form-group">
-                          <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+                          <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                       </div>
 
                   </div>
@@ -85,8 +114,8 @@
 
               <div class="row">
                 <div class="col-xs-12">
-                  <button (click)="checkOrder(form.value)" class="btn btn-success pull-right"
-                  [disabled]="!form.valid || cartItems().length === 0">
+                  <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right"
+                  [disabled]="!orderForm.valid || cartItems().length === 0">
                   <i class="fa fa-credit-card"></i> Concluir Pedido</button>
                 </div>
               </div>
